# TouchAI

./: .gitignore  .prettierignore  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.husky/: pre-commit
drizzle/: 0000_broken_zzzax.sql  0000_bumpy_punisher.sql  0000_cuddly_maverick.sql  0000_robust_anita_blake.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src/: main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: mod.rs
src-tauri/src/autostart/: mod.rs
src-tauri/src/commands/: autostart.rs  built_in_tools.rs  clipboard.rs  database.rs  mod.rs  quick_search.rs  shortcut.rs  window.rs
src-tauri/src/core/: mod.rs  setup.rs
src-tauri/src/core/built_in_tools/: bash.rs  mod.rs  registry.rs  types.rs
src-tauri/src/core/database/: mod.rs
src-tauri/src/core/database/contract/: embedded.rs  mod.rs  seed.rs
src-tauri/src/core/database/protocol/: decode.rs  mod.rs  types.rs
src-tauri/src/core/database/runtime/: executor.rs  import.rs  mod.rs
src-tauri/src/core/mcp/: client.rs
src-tauri/src/core/search/: manager.rs  mod.rs  provider_everything.rs  types.rs
src-tauri/src/core/system/: logging.rs  mod.rs  shortcut.rs
src-tauri/src/core/system/clipboard/: html.rs  image.rs  mod.rs  payload.rs  runtime.rs
src-tauri/src/core/window/: mod.rs  resize.rs
src-tauri/src/core/window/popup/: manager.rs  mod.rs  registry.rs
src-tauri/src/core/window/search/: mod.rs
src-tauri/src/core/window/settings/: mod.rs
src-tauri/src/core/window/tray/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/shortcut/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: mod.rs
src/components/: AlertMessage.vue  AppIcon.vue  ConfirmDialog.vue  ContextMenu.vue  CustomSelect.vue  MarkdownContent.vue  ModelCapabilityTags.vue  PasswordInput.vue  ResponseDisplay.vue  SearchBar.vue  SearchableSelect.vue  TitleBar.vue  appIconMap.ts
src/components/common/: ConfirmDialog.vue  CustomSelect.vue  DialogShell.vue  ModelCapabilityTags.vue  ModelLogo.vue  PasswordInput.vue  SvgIcon.vue  TitleBar.vue
src/components/search/: AttachmentList.vue  AttachmentOverflow.vue  ModelDropdown.vue  ResponsePanel.vue  SearchBar.vue
src/composables/: useAgent.ts  useAiRequest.ts  useAlert.ts  useAutoWindowResize.ts  useConfirm.ts  useContextMenu.ts  useMcpConnection.ts  useSessionStatus.ts  useToolApproval.ts  useWidgetManager.ts  useWindowResize.ts
src/composables/agent/: useAgent.ts  (+1 more)
src/database/: backup.ts  dialect.ts  driver.ts  index.ts  schema.ts  seed.ts
src/lib/: utils.ts
src/router/: index.ts
src/stores/: mcp.ts  settings.ts
src/styles/: markdown.css  tailwind.css
src/types/: commands.ts  conversation.ts  markdown-it-plugins.d.ts
src/utils/: attachment.ts  date.ts  font.ts  linkInterceptor.ts  markdown.ts  mcpSchemas.ts  modelLogoMatcher.ts  modelMetadata.ts  modelSchemas.ts  text.ts  zod.ts
src/views/: PopupView.vue  SearchView.vue  SettingsView.vue  TrayMenuView.vue
tests/: built-in-tools-bundle-regression.test.ts
(+282 files in other folders)
